# MRVP

./: README.md  calibrate.py  diagnose_residual_action.py  evaluate.py  evaluate_predicted_mrvp.py  generate_metadrive.py  generate_synthetic.py  mechanism_labels.py  preprocess_public.py  pretrain_context.py  pyproject.toml  recovery_teachers.py  requirements.txt  run_select.py  scenario_builder.py  select.py  targets.py  train.py  train_baseline.py  transition_extractor.py
configs/: ablations.yaml  dataset_carla.yaml  dataset_metadrive.yaml  default.yaml  eval_main.yaml  finetune_rpfn_cmrt.yaml  robustness.yaml  train_cmrt.yaml  train_rpfn.yaml
docs/: paper_method_mapping.md
mrvp/: __init__.py  action_selection.py  calibration.py  evaluation.py  selection.py
scripts/: calibrate.py  diagnose_meta_dataset.py  diagnose_metadrive_dataset_quality.py  diagnose_residual_action.py  evaluate.py  evaluate_msrt_transition.py  evaluate_predicted_mrvp.py  generate_metadrive.py  generate_synthetic.py  mechanism_labels.py  preprocess_public.py  pretrain_context.py  recovery_teachers.py  run_select.py  scenario_builder.py  train.py  train_baseline.py  transition_extractor.py  validate_counterfactual_roots.py  validate_method_alignment.py  validate_schema_no_leakage.py
tests/: test_degraded_dynamics_rollout.py  test_event_type_no_margin_dependency.py  test_harm_bins.py  test_lcvar.py  test_margins.py  test_no_todo.py  test_pair_dataset_admissible_only.py  test_reset_targets.py  test_root_split_no_leakage.py  test_rpn_strategy_traj_from_controls.py  test_schema.py  test_smoke.py  (+4 more)
(+94 files in other folders)
