[project]
name = "mrvp-pytorch"
version = "0.1.0"
description = "PyTorch implementation of Mechanism-Sufficient Recovery Viability Planning"
requires-python = ">=3.9"
dependencies = ["torch>=2.1", "numpy>=1.23", "pandas>=1.5", "tqdm>=4.65", "PyYAML>=6.0"]

[tool.setuptools]
packages = ["mrvp", "mrvp.data", "mrvp.models", "mrvp.training", "mrvp.carla", "mrvp.public_pretraining", "mrvp.utils"]
