[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mrvp"
version = "0.1.0"
description = "Motion-Reset Viability Programming implementation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "pyyaml>=6.0",
  "h5py>=3.8",
  "pandas>=1.5",
  "torch>=2.0",
  "matplotlib>=3.6"
]

[project.optional-dependencies]
sim = ["metadrive-simulator>=0.4.0", "carla>=0.9.15"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mrvp*"]
